# fosslove

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/migrations/versions/: 435fff87e3ff_add_app_settings.py  c3a1f2b4d5e6_audit_log_sessions_citext.py
apps/api/src/fosslove/: main.py  seed.py  utils.py
apps/api/src/fosslove/admin/: __init__.py  auth.py
apps/api/src/fosslove/api/: deps.py  http_cache.py
apps/api/src/fosslove/api/v1/: admin.py  auth.py  catalog.py  collections.py  favorites.py  scripts.py  users.py
apps/api/src/fosslove/core/: config.py  exceptions.py  metrics.py  middleware.py  pagination.py  ratelimit.py  runtime_settings.py  security.py
apps/api/src/fosslove/db/: events.py  session.py
apps/api/src/fosslove/db/models/: __init__.py  activity.py  catalog.py  enums.py  mixins.py  setting.py  user.py  userdata.py
apps/api/src/fosslove/schemas/: activity.py  auth.py  catalog.py  common.py  settings.py  user.py
apps/api/src/fosslove/scriptgen/: linux.py  windows.py
apps/api/src/fosslove/seed_data/: 01-browsers.json  02-editors-and-ides.json  03-developer-tools.json  04-terminals-and-shells.json  05-media-players.json  06-audio-and-music.json  07-graphics-and-design.json  08-photography.json  09-office-and-documents.json  10-notes-and-knowledge.json  11-communication.json  12-email-clients.json  13-gaming.json  14-security-and-privacy.json  15-system-utilities.json  16-file-management.json  17-networking-and-downloads.json  18-virtualization-and-containers.json
apps/api/src/fosslove/services/: activity_service.py  auth_service.py  catalog_service.py  collection_service.py  email.py  favorite_service.py  mappers.py  script_service.py  settings_service.py  user_service.py
apps/api/tests/: conftest.py  test_catalog.py  test_collections.py  test_health.py  test_migrations.py  test_new_features.py  test_ratelimit.py  test_scripts.py  test_settings.py
apps/web/: .dockerignore  Dockerfile  Makefile  biome.json  package.json
apps/web/src/app/: global-error.tsx  globals.css  layout.tsx  robots.ts  sitemap.ts
apps/web/src/components/: providers.tsx
apps/web/src/lib/: constants.ts  download.ts
backend/: .dockerignore  Dockerfile
backend/src/fosslove/: __main__.py  main.py  seed.py
backend/src/fosslove/api/: deps.py  router.py
backend/src/fosslove/core/: config.py  pagination.py
backend/src/fosslove/scriptgen/: __init__.py  (+1 more)
docker/: entrypoint.sh
migrations/: env.py  script.py.mako
migrations/versions/: 4166f2eba13d_initial_schema.py
src/fosslove/: seed.py
src/fosslove/admin/: auth.py  setup.py  views.py
src/fosslove/core/: cache.py  config.py  exceptions.py  logging.py  middleware.py  ratelimit.py  security.py
src/fosslove/db/: events.py  reset.py  session.py
src/fosslove/schemas/: auth.py  catalog.py  collection.py  common.py  script.py  user.py
src/fosslove/scriptgen/: linux.py  windows.py
src/fosslove/services/: auth_service.py  catalog_service.py  collection_service.py  email.py  favorite_service.py  maintenance.py  user_service.py
src/fosslove/worker/: settings.py  tasks.py
tests/: conftest.py  test_auth.py  test_catalog.py  test_scriptgen.py
(+106 files in other folders)
