[project]
name = "fosslove"
version = "1.0.0"
description = "FOSSLove — one-stop catalog of FOSS apps with one-click install-script generation for Windows and Linux."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "FOSSLove" }]
keywords = ["fastapi", "foss", "catalog", "winget", "flatpak", "installer"]

dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pyjwt>=2.13.0",
    "argon2-cffi>=25.1.0",
    "structlog>=26.1.0",
    "python-multipart>=0.0.32",
    "python-slugify>=8.0.4",
    "limits>=5.8.0",
    "redis[hiredis]>=8.0",
    "prometheus-client>=0.21.0",
    "aiosmtplib>=5.1.2",
    "tenacity>=9.1.4",
    "httpx>=0.28.1",
    "sqladmin>=0.27.2",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.18",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "asgi-lifespan>=2.1.0",
    "faker>=40.23.0",
    "factory-boy>=3.3.3",
    "types-python-slugify>=8.0.2",
]

[project.scripts]
fosslove = "fosslove.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fosslove"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "ASYNC",
    "S", "T20", "SIM", "RUF", "PL", "TID",
]
ignore = ["PLR0913", "PLR2004", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "PLR2004", "PLR0913", "PLC0415"]
"src/fosslove/scriptgen/**" = ["S608", "E501"]
"src/fosslove/admin/views.py" = ["RUF012"]
"src/fosslove/db/session.py" = ["PLW0603"]
"src/fosslove/core/config.py" = ["S105"]
"src/fosslove/db/models/enums.py" = ["S105"]
"src/fosslove/schemas/auth.py" = ["S105"]
"src/fosslove/services/activity_service.py" = ["S105"]
"src/fosslove/__main__.py" = ["S104"]

[tool.ruff.lint.isort]
known-first-party = ["fosslove"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["slugify.*", "factory.*", "limits.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra -q --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/fosslove"]
branch = true
omit = ["src/fosslove/__main__.py", "src/fosslove/seed.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
